allow-specific.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-specific
spec:
  podSelector:
    matchLabels:
      deployment: <name of the deployment you want to allow traffic to (destination)>
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            network: <namesapce of where the deployment or pod is sitting on>
        podSelector:
          matchLabels:
            deployment: <deployment name of the pod you want to talk to the other deployment (source)>
      ports:
      - port: <port number>
        protocol: <define the protocol>
